--- a/buildscripts/docker_image_aliases/IMAGE_DEBIAN_9/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_DEBIAN_9/meta.yml
@@ -1,2 +1,2 @@
 source: debian:9
-tag: artifacts.lan.tribe29.com:4000/debian:9-image-alias-master-4259cf45ef
+tag: artifacts.lan.tribe29.com:4000/debian:9-image-alias-2.1.0-00df8c65f6
