Fix test_version_file_permissions for RPM distros
Change-Id: Iba1da65f405deb8b8fccec8efb46faf22031120e

--- a/omd/Makefile
+++ b/omd/Makefile
@@ -152,6 +152,9 @@ $(PRE_INSTALL): $(BUILD_HELPER_DIR)
 	$(MKDIR) $(DESTDIR)$(OMD_ROOT)/share/omd
 	$(MKDIR) $(DESTDIR)$(OMD_ROOT)/share/diskspace
 	$(MKDIR) $(DESTDIR)$(OMD_ROOT)/share/man/man1
+	chmod 755 $(DESTDIR)$(OMD_ROOT)/share
+	chmod 755 $(DESTDIR)$(OMD_ROOT)/share/man
+	chmod 755 $(DESTDIR)$(OMD_ROOT)/share/man/man1
 	$(MKDIR) $(DESTDIR)$(OMD_ROOT)/skel
 	$(call log_time,$@,done)
 	touch $@
