add types to cmk_tabs.ts
Change-Id: I03d3ad4161bc44b5f6f076cb67cb6e865d0671d7

--- a/tsconfig.strict.json
+++ b/tsconfig.strict.json
@@ -56,7 +56,8 @@
         //"./web/htdocs/js/modules/figures/cmk_figures_plugins.ts",
         "./web/htdocs/js/modules/quicksearch.ts",
         "./web/htdocs/js/modules/webauthn.ts",
-        "./web/htdocs/js/modules/search.ts"
+        "./web/htdocs/js/modules/search.ts",
+        "./enterprise/web/htdocs/js/modules/figures/cmk_tabs.ts"
     ],
     "exclude": [
         "./web/**/*",
