--- a/omd/packages/libgsf/BUILD.libgsf.bazel
+++ b/omd/packages/libgsf/BUILD.libgsf.bazel
@@ -1,27 +1,30 @@
 load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")
 
 filegroup(
-    name="all_srcs",
-    srcs=glob(["**/*"], exclude=["bazel-*"]),
+    name = "all_srcs",
+    srcs = glob(
+        ["**/*"],
+        exclude = ["bazel-*"],
+    ),
 )
 
 configure_make(
-    name="libgsf",
-    visibility=["//visibility:public"],
-    args=["-j4"],
-    lib_source=":all_srcs",
-    out_binaries=[
+    name = "libgsf",
+    args = ["-j4"],
+    lib_source = ":all_srcs",
+    out_binaries = [
         "gsf",
         "gsf-office-thumbnailer",
         "gsf-vba-dump",
     ],
-    out_shared_libs=[
-          "libgsf-1.so.114.0.44",
-          "pkgconfig",
+    out_data_dirs = ["share"],
+    out_shared_libs = [
+        "libgsf-1.so.114.0.44",
+        "pkgconfig",
     ],
-    out_static_libs=[
+    out_static_libs = [
         "libgsf-1.a",
     ],
-    out_data_dirs = ["share"],
-    targets = ["install",],
+    targets = ["install"],
+    visibility = ["//visibility:public"],
 )
