Moved mangling to ChronoUtils.
Change-Id: I01e83a67ebf7f040cbab6bdde192594ea24ce50d

--- a/packages/livestatus/test/CMakeLists.txt
+++ b/packages/livestatus/test/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(
   test_IntColumn.cc
   test_ListColumn.cc
   test_LogEntry.cc
+  test_Mangling.cc
   test_Metric.cc
   test_RegExp.cc
   test_Renderer.cc
