Tighten mypy on cmk.cee.bakery
Change-Id: I3044e5214338f388a4477717dfb3e78a6cd87c00

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,6 +119,7 @@ warn_unreachable = false  # 240 errors in 133 files
 
 [[tool.mypy.overrides]]
 module = [
+    "cmk.cee.bakery.*",
     "cmk.gui.background_job",
     "cmk.gui.backup",
     "cmk.gui.mobile.views",
