--- a/agents/wnx/src/check_mk_service.rc
+++ b/agents/wnx/src/check_mk_service.rc
@@ -69,7 +69,7 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "tribe29 GmbH"
+            VALUE "CompanyName", "Checkmk GmbH"
             VALUE "FileDescription", "Check MK Agent Service Executable"
             VALUE "FileVersion", VER_FILE_VERSION_STR
             VALUE "InternalName", "check_mk_agent.exe"
