--- a/omd/packages/mk-livestatus/skel/etc/mk-livestatus/nagios.cfg
+++ b/omd/packages/mk-livestatus/skel/etc/mk-livestatus/nagios.cfg
@@ -2,6 +2,6 @@
 # This creates a UNIX socket where status and log
 # data can be retrieved by Multisite, NagVis and
 # other addons.
-broker_module=###ROOT###/lib/mk-livestatus/livestatus.o num_client_threads=20 crash_reports_path=###ROOT###/var/check_mk/crashes license_usage_history_path=###ROOT###/var/check_mk/licensing/history.json mk_logwatch_path=###ROOT###/var/check_mk/logwatch mk_inventory_path=###ROOT###/var/check_mk/inventory pnp_path=###ROOT###/var/pnp4nagios/perfdata ###ROOT###/tmp/run/live robotmk_html_log_path=###ROOT###/var/robotmk edition=###EDITION### state_file_created=###ROOT###/var/check_mk/licensing/state_file_created
+broker_module=###ROOT###/lib/mk-livestatus/livestatus.o num_client_threads=20 crash_reports_path=###ROOT###/var/check_mk/crashes license_usage_history_path=###ROOT###/var/check_mk/licensing/history.json mk_inventory_path=###ROOT###/var/check_mk/inventory robotmk_html_log_path=###ROOT###/var/robotmk mk_logwatch_path=###ROOT###/var/check_mk/logwatch state_file_created_file=###ROOT###/var/check_mk/licensing/state_file_created pnp_path=###ROOT###/var/pnp4nagios/perfdata edition=###EDITION### ###ROOT###/tmp/run/live
 event_broker_options=-1
 
