Move TrialManager to livestatus package.
Change-Id: I4e85fea51c7eb04314949abebc8b1cc3fc825508

--- a/packages/livestatus/test/CMakeLists.txt
+++ b/packages/livestatus/test/CMakeLists.txt
@@ -35,7 +35,8 @@ add_executable(
   test_Queue.cc
   test_StringColumn.cc
   test_StringUtil.cc
-  test_TimeColumn.cc)
+  test_TimeColumn.cc
+  test_TrialManager.cc)
 
 target_include_directories(test PUBLIC ../include ${googletest_ext_include})
 target_compile_features(test PRIVATE cxx_std_17)
