check_traceroute: split into active_checks/ and cmk/active_checks/
CMK-13211

Change-Id: If84ad0836ab6a002182778d98c51004dd713e119

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -22,6 +22,7 @@ PYTEST_UNIT_TEST_OPTS = \
     ../cmk/utils \
     ../agent-receiver \
     ../omd/packages/omd \
+	../cmk/active_checks \
     unit
 PYTEST_OPTS_UNIT_SKIP_SLOW = -m "not slow"
 PYTEST_OPTS_UNIT_SLOW_ONLY = -m "slow"
