--- a/.layering.yaml
+++ b/.layering.yaml
@@ -150,6 +150,7 @@ package-definitions:
   checkmk-agents-wnx-tests: [agents.wnx.tests]
   checkmk-bin: [bin]
   checkmk-cma: [cma, cma_net]
+  checkmk-cmk-active_checks: [cmk.active_checks]
   checkmk-cmk-base: [cmk.base]
   checkmk-cmk-bi: [cmk.bi]
   checkmk-cmk-ec-export: [cmk.ec.export]
@@ -209,6 +210,7 @@ allowed-package-relationships:
     requests_kerberos,
     sqlanydb,
     urllib3,
+    checkmk-cmk-active_checks,
     checkmk-cmk-utils,
     checkmk-livestatus
   ]
@@ -537,6 +539,7 @@ allowed-package-relationships:
     checkmk-agent-receiver,
     checkmk-agents-plugins,
     checkmk-cmk,
+    checkmk-cmk-active_checks,
     checkmk-cmk-base,
     checkmk-cmk-bi,
     checkmk-cmk-ec,
