--- a/agents/cfg_examples/dnsclient.cfg
+++ b/agents/cfg_examples/dnsclient.cfg
@@ -5,4 +5,4 @@
 
 # shellcheck disable=2034 # HOSTADDRESSES appears unused. Verify use (or export if used externally).
 
-HOSTADDRESSES="checkmk.com tribe29.com"
+HOSTADDRESSES="checkmk.com example.com"
