add following files to the list of typed files:
./enterprise/web/htdocs/js/modules/figures/cmk_state.ts
./enterprise/web/htdocs/js/modules/figures/cmk_inventory.ts
./enterprise/web/htdocs/js/modules/figures/cmk_state_summary.ts

These files didn't cause any errors related to implicit any typing,
so no need to add types here.

Change-Id: I914787c700e120f77851552a2055a7df8dd79fcb

--- a/tsconfig.strict.json
+++ b/tsconfig.strict.json
@@ -57,7 +57,10 @@
         "./web/htdocs/js/modules/quicksearch.ts",
         "./web/htdocs/js/modules/webauthn.ts",
         "./web/htdocs/js/modules/search.ts",
-        "./enterprise/web/htdocs/js/modules/figures/cmk_tabs.ts"
+        "./enterprise/web/htdocs/js/modules/figures/cmk_tabs.ts",
+        "./enterprise/web/htdocs/js/modules/figures/cmk_state.ts",
+        "./enterprise/web/htdocs/js/modules/figures/cmk_inventory.ts",
+        "./enterprise/web/htdocs/js/modules/figures/cmk_state_summary.ts"
     ],
     "exclude": [
         "./web/**/*",
