add types to cmk_table.ts
Change-Id: I16ad7b643ada2506c1ee8ae4cbb04c7e45343902

--- a/tsconfig.strict.json
+++ b/tsconfig.strict.json
@@ -51,7 +51,7 @@
         "./web/htdocs/js/modules/prediction.ts",
         "./web/htdocs/js/modules/bi.ts",
         //"./web/htdocs/js/modules/figures/cmk_stats.ts",
-        //"./web/htdocs/js/modules/figures/cmk_table.ts",
+        "./web/htdocs/js/modules/figures/cmk_table.ts",
         "./web/htdocs/js/modules/figures/cmk_figures.ts",
         //"./web/htdocs/js/modules/figures/cmk_figures_plugins.ts",
         "./web/htdocs/js/modules/quicksearch.ts",
