--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
     "@types/d3": "^7.1.1",
+    "@types/dc": "^4.2.1",
     "@types/jquery": "^3.5.13",
     "@types/lodash": "^4.14.191",
     "@types/node": "^17.0.10",
