--- a/docker_image/Dockerfile
+++ b/docker_image/Dockerfile
@@ -8,6 +8,8 @@ ARG CMK_VERSION="2.2.0b9"
 # Choose one of: raw, enterprise, managed
 ARG CMK_EDITION="raw"
 
+ARG CMK_DL_URL="https://download.checkmk.com/checkmk"
+
 # The following variables can be set during container init (docker run -e KEY=val)
 ARG CMK_SITE_ID
 ENV CMK_SITE_ID="cmk"
@@ -27,6 +29,11 @@ ARG DISTRO_CODENAME="jammy"
 # Add helper variable to better detect when running inside container.
 # Used e.g. for omd update
 ENV CMK_CONTAINERIZED="TRUE"
+
+# The credentials for the download are provided by a sidecar container. For
+# local builds it is convenient to change this (e.g. to the docker host and
+# running `python -m http.simple`)
+ARG CREDENTIALS_URL="http://127.0.0.1:8000/secret"
 
 # Make the list of required packages available to the following command
 COPY needed-packages /needed-packages
@@ -77,8 +84,11 @@ RUN set -e \
     && PKG_NAME="check-mk-${CMK_EDITION}-${CMK_VERSION}" \
     && PKG_FILE="${PKG_NAME}_0.${DISTRO_CODENAME}_$(dpkg --print-architecture).deb" \
     && if [ ! -e "/${PKG_FILE}" ]; then \
-        echo "ERROR: Please provide ${PKG_FILE} by downloading it from https://download.checkmk.com/checkmk" \
-        && return 1 ; \
+        echo "Receive download credentials from ${CREDENTIALS_URL}..." && \
+        CMK_DL_CREDENTIALS=$(curl -fsS "${CREDENTIALS_URL}") && \
+        echo "Downloading ${PKG_FILE}..." && \
+        echo "--user \"${CMK_DL_CREDENTIALS}\"" \
+            | curl -f -o "${PKG_FILE}" -K - "${CMK_DL_URL}/${CMK_VERSION}/${PKG_FILE}" ; \
        fi \
     && gpg -q --import "/Check_MK-pubkey.gpg" \
     && gpg --verify "${PKG_FILE}" \
