Make re2 a private library for liblivestatus.
re2 is linked statically into liblivestatus, so we don't need to make it
PUBLIC.

Change-Id: Ia903a2d876c02aeec52d6181623b31584d9c8efb

--- a/packages/livestatus/src/CMakeLists.txt
+++ b/packages/livestatus/src/CMakeLists.txt
@@ -212,7 +212,7 @@ target_include_directories(livestatus PUBLIC ../include ${asio_ext_include}
 target_link_libraries(
   livestatus
   PRIVATE pthread
-  PUBLIC re2::re2)
+  PRIVATE re2::re2)
 target_compile_features(livestatus PUBLIC cxx_std_17)
 set_target_properties(livestatus PROPERTIES VERSION ${PROJECT_VERSION}
                                             SOVERSION ${PROJECT_VERSION_MAJOR})
