bazelize perl modules
Change-Id: If36ee19b5b72dd97d81ffd8f3e7c9578f0917dc6

--- a/omd/WORKSPACE
+++ b/omd/WORKSPACE
@@ -15,6 +15,19 @@ load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_depende
 # https://bazelbuild.github.io/rules_foreign_cc/0.9.0/flatten.html#rules_foreign_cc_dependencies
 rules_foreign_cc_dependencies()
 
+http_archive(
+    name = "rules_pkg",
+    sha256 = "8f9ee2dc10c1ae514ee599a8b42ed99fa262b757058f65ad3c384289ff70c4b8",
+    urls = [
+        "https://mirror.bazel.build/github.com/bazelbuild/rules_pkg/releases/download/0.9.1/rules_pkg-0.9.1.tar.gz",
+        "https://github.com/bazelbuild/rules_pkg/releases/download/0.9.1/rules_pkg-0.9.1.tar.gz",
+    ],
+)
+
+load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")
+
+rules_pkg_dependencies()
+
 #   .--PACKAGES------------------------------------------------------------.
 #   |           ____   _    ____ _  __    _    ____ _____ ____             |
 #   |          |  _ \ / \  / ___| |/ /   / \  / ___| ____/ ___|            |
@@ -113,4 +126,25 @@ load("//packages/snap7:snap7_http.bzl", "snap7")
 snap7(
     sha256 = "fe137737b432d95553ebe5d5f956f0574c6a80c0aeab7a5262fb36b535df3cf4",
     version_str = "1.4.2",
+)
+
+load("//packages/perl-modules:perl-modules_http.bzl", "perl_modules")
+
+perl_modules()
+
+load("//:bazel_variables.bzl", "UPSTREAM_MIRROR_URL")
+
+http_archive(
+    name = "Crypt-SSLeay",
+    build_file = "//packages/perl-modules:BUILD.Crypt-SSLeay.bazel",
+    patch_args = ["-p1"],
+    patch_tool = "patch",
+    patches = [
+        "//packages/perl-modules/patches:Crypt-SSLeay-0.72-do-not-use-SSLv2_client_method-with-new-openssl.dif",
+    ],
+    strip_prefix = "Crypt-SSLeay-0.72",
+    urls = [
+        "https://www.cpan.org/modules/by-module/Net/NANIS/Crypt-SSLeay-0.72.tar.gz",
+        UPSTREAM_MIRROR_URL + "Crypt-SSLeay-0.72.tar.gz",
+    ],
 )
