Move DynamicRRDColunm to Livestatus library.
Change-Id: Ibeaa805f409fcff911df1b7aee6b3d86089cf34d

--- a/packages/livestatus/src/CMakeLists.txt
+++ b/packages/livestatus/src/CMakeLists.txt
@@ -24,6 +24,7 @@ set(livestatus_headers
     ${header_location}/DynamicColumn.h
     ${header_location}/DynamicEventConsoleReplicationColumn.h
     ${header_location}/DynamicFileColumn.h
+    ${header_location}/DynamicRRDColumn.h
     ${header_location}/EventConsoleConnection.h
     ${header_location}/FileSystemHelper.h
     ${header_location}/Filter.h
