Move TableServices to Livestatus library.
Change-Id: I5002f72c66eed4d6e91e957c9c9c9a3dbcdea640

--- a/packages/livestatus/src/CMakeLists.txt
+++ b/packages/livestatus/src/CMakeLists.txt
@@ -91,6 +91,7 @@ set(livestatus_headers
     ${header_location}/TableHosts.h
     ${header_location}/TableLabels.h
     ${header_location}/TableServiceGroups.h
+    ${header_location}/TableServices.h
     ${header_location}/TableStatus.h
     ${header_location}/TableTimeperiods.h
     ${header_location}/TimeAggregator.h
@@ -167,6 +168,7 @@ set(livestatus_sources
     TableHosts.cc
     TableLabels.cc
     TableServiceGroups.cc
+    TableServices.cc
     TableStatus.cc
     TableTimeperiods.cc
     TimeFilter.cc
