Move TableComments to Livestatus library.
Change-Id: I138dd34fa4ebb8408f09243737eb4006a58c3973

--- a/packages/livestatus/src/CMakeLists.txt
+++ b/packages/livestatus/src/CMakeLists.txt
@@ -80,6 +80,7 @@ set(livestatus_headers
     ${header_location}/Table.h
     ${header_location}/TableColumns.h
     ${header_location}/TableCommands.h
+    ${header_location}/TableComments.h
     ${header_location}/TableContactGroups.h
     ${header_location}/TableContacts.h
     ${header_location}/TableCrashReports.h
@@ -157,6 +158,7 @@ set(livestatus_sources
     Table.cc
     TableColumns.cc
     TableCommands.cc
+    TableComments.cc
     TableContactGroups.cc
     TableContacts.cc
     TableCrashReports.cc
