Move TableServicesByGroup to Livestatus library.
Change-Id: If1848bd22801b77647ca5ad46f3b6b666d3ff7f1

--- a/packages/livestatus/src/CMakeLists.txt
+++ b/packages/livestatus/src/CMakeLists.txt
@@ -95,6 +95,7 @@ set(livestatus_headers
     ${header_location}/TableLabels.h
     ${header_location}/TableServiceGroups.h
     ${header_location}/TableServices.h
+    ${header_location}/TableServicesByGroup.h
     ${header_location}/TableStatus.h
     ${header_location}/TableTimeperiods.h
     ${header_location}/TimeAggregator.h
@@ -175,6 +176,7 @@ set(livestatus_sources
     TableLabels.cc
     TableServiceGroups.cc
     TableServices.cc
+    TableServicesByGroup.cc
     TableStatus.cc
     TableTimeperiods.cc
     TimeFilter.cc
