Move TableServicesByHostGroup to Livestatus library.
Change-Id: I9815880c39b216dfd2fca791e229ab923b6da8b0

--- a/packages/livestatus/src/CMakeLists.txt
+++ b/packages/livestatus/src/CMakeLists.txt
@@ -96,6 +96,7 @@ set(livestatus_headers
     ${header_location}/TableServiceGroups.h
     ${header_location}/TableServices.h
     ${header_location}/TableServicesByGroup.h
+    ${header_location}/TableServicesByHostGroup.h
     ${header_location}/TableStatus.h
     ${header_location}/TableTimeperiods.h
     ${header_location}/TimeAggregator.h
@@ -177,6 +178,7 @@ set(livestatus_sources
     TableServiceGroups.cc
     TableServices.cc
     TableServicesByGroup.cc
+    TableServicesByHostGroup.cc
     TableStatus.cc
     TableTimeperiods.cc
     TimeFilter.cc
